argocd/infra/cilium/manifests/cilium-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
  namespace: kube-system
  annotations:
    external-dns.kubernetes.io/target: 9e2d91d4-a689-4ecc-a6c0-fc83be348d59.cfargotunnel.com
spec:
  gatewayClassName: cilium
  addresses:
  - type: IPAddress
    value: 10.11.10.137
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    protocol: HTTPS
    port: 443
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: wildcard-tls
        namespace: kube-system
